<resources>
    <string name="app_name">AuraDripApp</string>
    <string name="dashboard">Dashboard</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="ukrainian">Ukrainian</string>

    <string name="error_message">Error: %1$s</string>
    <string name="try_again">Try again</string>
    <string name="moisture">Moisture</string>
    <string name="temperature">Temperature</string>
    <string name="air_humidity">Air humidity</string>
...
